--- a/php-service/app/composer.json
+++ b/php-service/app/composer.json
@@ -1,7 +1,8 @@
 {
     "require": {
         "protobuf-php/protobuf-plugin": "^0.1.3",
-        "grpc/grpc": "^1.38"
+        "grpc/grpc": "^1.38",
+        "google/protobuf": "^3.17"
     },
 
     "autoload":{
